--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "sfpy-httpclient",
   "version": "1.0.0",
   "description": "frontend http client library",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +19,19 @@
   "bugs": {
     "url": "https://github.com/getsafepay/safepay-httpclient/issues"
   },
-  "homepage": "https://github.com/getsafepay/safepay-httpclient#readme"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "homepage": "https://github.com/getsafepay/safepay-httpclient#readme",
+  "dependencies": {
+    "axios": "^1.5.1",
+    "qs": "^6.11.2",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.8"
+  }
 }
