--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "/dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env TS_NODE_PROJECT='./tsconfig.test.json' mocha"
   },
   "repository": {
     "type": "git",
@@ -27,10 +27,18 @@
   "homepage": "https://github.com/getsafepay/safepay-httpclient#readme",
   "dependencies": {
     "axios": "^1.5.1",
+    "crypto": "^1.0.1",
     "qs": "^6.11.2",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/qs": "^6.9.8"
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.17",
+    "@types/qs": "^6.9.8",
+    "chai": "^5.1.0",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.3.0",
+    "ts-node": "^10.9.2"
   }
 }
